# GDY-SAC-CO2RR-C2

./: .gitignore  Cargo.toml  README.md  check_list.md
GDY_SAC_CO2RR_C2/: Cargo.toml
GDY_SAC_CO2RR_C2/src/: main.rs
adsorption_pathways/: Cargo.toml  README.md  c3_investigation.md  ethane_ch2.yaml  ethane_co_dimer.yaml  ethyne_path.yaml  ethyne_single.yaml  ketene_others.yaml  oxalic_acid.yaml  water.yaml
adsorption_pathways/adsorbates/CH2_coupling/: C2H6.msi  COH.msi
adsorption_pathways/adsorbates/CO_dimer/: CH2CHO.msi  CH3CH.msi  HCCHO.msi  HOCHC.msi  OCCH_C.msi  OCCH_cc.msi  OCCOH.msi  OCCO_CC.msi  OCCO_CO.msi
adsorption_pathways/adsorbates/Water/: H.msi  H2.msi  H2O.msi  O2.msi  OH.msi
adsorption_pathways/adsorbates/ethyne/: C.msi  CH.msi  CHOCH.msi  CHOCH2.msi  CHOCHO.msi  CHOHCH2.msi  H2CCO_C.msi  HCCH.msi  HCCH2.msi  OCCOH_CO.msi  OCC_v.msi
adsorption_pathways/adsorbates/ketene/: 2xCH3OH.msi  CH3OCH3.msi  HCOOCH3.msi  OCCH_C.msi  OCCH_CC.msi  OCCH_mono.msi  ketene.msi
adsorption_pathways/adsorbates/oxalic_acid/: C2O4.msi  H2C2O4.msi  HC2O4.msi
adsorption_pathways/dimethyl_ether/: README.md
adsorption_pathways/ethane/: README.md
adsorption_pathways/ethyne/: README.html  README.md  pathway.md
adsorption_pathways/ketene/: README.md
adsorption_pathways/methyl_formate_HCOOCH3/: README.md
adsorption_pathways/oxalic_acid/: README.md
adsorption_pathways/src/: ethyne_pathway.rs  lib.rs  test.rs
adsorption_pathways/src/ethane_pathway/: mod.rs
adsorption_pathways/src/ketene/: mod.rs
adsorption_pathways/src/water_pathway/: mod.rs
basic_models/: Cargo.toml
basic_models/src/: lib.rs
basic_models/src/gdy_lattice/: mod.rs
basic_models/src/gdy_model_edit/: mod.rs
ethane_pathway/: Cargo.toml  README.md  ethane_ch2.yaml  ethane_co_dimer.yaml  ethane_pathway.yaml
ethane_pathway/adsorbates/CH2_coupling/: CH2.msi  CH3.msi  CO.msi  COOH.msi
ethane_pathway/adsorbates/CO_dimer/: CC.msi  CCH.msi  CH2C.msi  CH2CH.msi  CH3CH2.msi  CH3CH2O.msi  HOCC.msi  HOCCOH.msi  OCC.msi  OHCCH.msi
ethane_pathway/src/: ch2_pathway.rs  co_dimer_pathway.rs  lib.rs
ethyne_pathway/: Cargo.toml  README.md
model_generation/: Cargo.toml  SAC_GDY_Ag_COOH.msi
model_generation/src/: main.rs  tasks.rs  tasks.rs.rs
model_generation/src/tasks/: ethane_task.rs  ethyne_task.rs  ketene_task.rs  mod.rs  oxalic_acid_task.rs  water_task.rs
resources/: SAC_GDY_M.msi  metal_table.yaml
