[package]
name = "adsorption_pathways"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-model-core = {path= "../../castep-model-core"}
castep_model_generator_backend = {path= "../../castep-model-generator-backend"}
serde = { version = "1.0", features = ["derive"] }
