[package]
name = "basic_models"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-model-core = "0.2.*"
castep_model_generator_backend = "2.1.*"
castep-periodic-table = "0.2.*"
nalgebra = "0.32.*"
