[package]
name = "ethane_pathway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-model-core = "0.1.*"
castep_model_generator_backend = "2.*"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.31.*"
