[package]
name = "model_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_models = { path = "../basic_models" }
ethane_pathway = { path = "../ethane_pathway" }
castep_model_generator_backend = { git = "https://github.com/TonyWu20/castep-model-generator-backend", branch = "dev_generic" }
castep-periodic-table = "0.1.*"
rayon = "1.*"
glob = "*"
clap = {version = "4", features = ["derive"]}
