[package]
name = "model_generation"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_models = { path = "../basic_models" }
adsorption_pathways = { path = "../adsorption_pathways" }
castep-model-core = {path= "../../castep-model-core"}
castep_model_generator_backend = {path= "../../castep-model-generator-backend"}
indicatif = {version="0.*", features=["rayon"]}
castep-periodic-table = "0.1.*"
rayon = "1.*"
glob = "*"
clap = {version = "4", features = ["derive"]}
